# langchain_playground

./: .env.example  .gitignore  Dockerfile  Readme.md  pyproject.toml
01_chatmodels/: 01_basic-chatmodels.py  03_messages_concept.py  05_chathistory.py  06_storing-chathistory.py  basic-chatmodels.py  chathistory.py  chatmodel-stream.py  function-calling.py  ollama-chatmodel.py
02_prompt-tempelates/: 01_base-tempelate.py  02_prompt-tempelates-models.py
03_chain/: 02_sequence-chain.py  03_parallel-chain.py  base-chain.py
04_rag/: 01_basic-rag.py  02_document-embedding.py  03_rag_retriever_deep_dive.py  04_retrieval_chain.py  basic-rag.py  document-embedding.py  rag-with-llms.py  rag_conversation.py  rag_retriever_deep_dive.py
